// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppFilter /> should render correctly 1`] = `
<div>
  <div
    class="pf-c-dropdown ins-c-page__app-filter-dropdown"
    data-ouia-component-id="App Filter"
    data-ouia-component-type="PF4/Dropdown"
    data-ouia-safe="true"
  >
    <button
      aria-expanded="false"
      aria-haspopup="false"
      class="pf-c-dropdown__toggle"
      data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
      data-ouia-component-type="PF4/DropdownToggle"
      data-ouia-safe="true"
      id="toggle-id"
      type="button"
    >
      <span
        class="pf-c-dropdown__toggle-text"
      >
        Find an app or service
      </span>
      <span
        class="pf-c-dropdown__toggle-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class=""
  />
</div>
`;

exports[`<AppFilter /> should render empty state on no filter match and clear app filters 1`] = `
<div>
  <div
    class="pf-c-dropdown pf-m-expanded ins-c-page__app-filter-dropdown"
    data-ouia-component-id="App Filter"
    data-ouia-component-type="PF4/Dropdown"
    data-ouia-safe="true"
  >
    <button
      aria-expanded="true"
      aria-haspopup="false"
      class="pf-c-dropdown__toggle"
      data-ouia-component-id="OUIA-Generated-DropdownToggle-4"
      data-ouia-component-type="PF4/DropdownToggle"
      data-ouia-safe="true"
      id="toggle-id"
      type="button"
    >
      <span
        class="pf-c-dropdown__toggle-text"
      >
        Find an app or service
      </span>
      <span
        class="pf-c-dropdown__toggle-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </button>
    <div
      class="pf-c-dropdown__menu"
    >
      <div
        class="content"
      >
        <div
          class="pf-l-flex search"
        >
          <div
            class="pf-c-search-input"
            data-ouia-component-id="app-filter-search"
          >
            <span
              class="pf-c-search-input__text"
            >
              <span
                class="pf-c-search-input__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  />
                </svg>
              </span>
              <input
                aria-label="Search input"
                class="pf-c-search-input__text-input"
                placeholder="Find application or service"
                value="foo"
              />
            </span>
            <span
              class="pf-c-search-input__utilities"
            >
              <span
                class="pf-c-search-input__clear"
              >
                <button
                  aria-disabled="false"
                  aria-label="Clear"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                </button>
              </span>
            </span>
          </div>
        </div>
        <div
          class="pf-c-empty-state pf-u-mt-xl"
        >
          <div
            class="pf-c-empty-state__content"
          >
            <svg
              aria-hidden="true"
              class="pf-c-empty-state__icon pf-u-mb-xl"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
              />
            </svg>
            <h4
              class="pf-c-title pf-m-md"
            >
              No matching applications or services found.
            </h4>
            <div
              class="pf-c-empty-state__body pf-u-mb-xl"
            >
              This filter criteria matches no applications or services. Try changing your input filter.
            </div>
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-link pf-u-mt-lg"
              data-ouia-component-id="app-filter-clear-input"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              Clear all filters
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="pf-c-backdrop"
  />
</div>
`;
